# telegrardy

./: .gitignore  README.md  pyproject.toml  requirements.txt  telegrardy.py
telegrardy/: __main__.py
telegrardy/bot/: __init__.py  clues.py
telegrardy/clues/: __init__.py  downloader.py  parser.py
telegrardy/jarchive/: __init__.py  downloader.py  parser.py
telegrardy/strings/: __init__.py  en_US.toml
tests/: test_telegrardy.py
