[tool.poetry]
name = "telegrardy"
version = "0.1.0"
description = "Play the J! Archive as a Telegram Bot"
authors = ["Nikhil Jha <mail@nikhiljha.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.6"
beautifulsoup4 = "^4.9.3"
loguru = "^0.5.3"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
